src/styles/components/_form.sass
form
  label
    display: block
    font-size: 14px
    color: #ccc
    margin-bottom: 10px

  textarea, input[type='text'], input[type='email'], input[type='password']
    box-sizing: border-box
    width: 100%
    background-color: #32526a
    border: 0px
    padding: 11px 10px
    outline: 0
    color: #fff
    margin-bottom: 8px
    color: #f0f0f0
    border-radius: 4px
    border: 1px solid lighten(#32526a, 5%)
    padding-left: 15px
    line-height: normal

    &:focus
      border: 1px solid lighten(#32526a, 15%)
      box-shadow: none

  .text-field-hint
    font-size: 12px
    color: #ccc
    .error
      color: $gold

  input[readonly]
    cursor: default

  input[type="password"]
    letter-spacing: 3px
    font-weight: 700

  .button-area
    height: 65px
    position: relative

    >span
      position: absolute
      left: 0px
      width: 100%
      z-index: 0

    .form-success
      z-index: 10
      position: relative
      font-size: 16px
      padding-left: 8px
      i
        margin-right: 8px
        color: #23c451

// in-place editable cluster name form
form.cluster-name
  display: inline-block

  input[type='text']
    display: inline-block
    padding: 0px 5px
    width: 320px
    margin-right: 5px
    font-size: 85%
  
  .btn[type='submit']
    display: inline
  
  .btn-group
    float: none
    margin-left: 4px
  
a.cluster-name:hover
  text-decoration-style: dotted
  color: #fff

